Fix exports again