@@ -10,8 +10,8 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>
-            --add-exports
-            javafx.graphics/com.sun.javafx.application=ALL-UNNAMED,javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+            --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+            --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
             -Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true
             -Dglass.platform=Monocle -Dmonocle.platform=Headless -Dprism.order=sw -Dprism.text=t2k
             -Dtestfx.setup.timeout=2500 -Dprism.verbose=true
@@ -230,8 +230,8 @@
     <dependency>
       <artifactId>openjfx-monocle</artifactId>
       <groupId>org.testfx</groupId>
-      <scope>test</scope> <!-- jdk-9+181 for Java 9, jdk-11+26 for Java 11 -->
-      <version>8u76-b04</version>
+      <scope>test</scope>
+      <version>jdk-12.0.1+2</version>
     </dependency>
   </dependencies>
   <groupId>org.otp-r11</groupId>
